# Astar

./: README.md  pyproject.toml
astar/: debugger.py  graph.py  index.html  main.py  point.py  pyscript.toml  style.css
